# metis

./: .gitignore  README.md
adr/: 00_design.md  01_domain.md  02_mcp.md
app/: README.md
backend/: README.md
bootstrap/: README.md  bootstrap.sh
catalog/: README.md  extension-catalog.json  skill-catalog.json  skill-catalog.manifest.json
cli/: README.md
extensions/: README.md  setup.sh
frontend/: README.md  package-lock.json  (+1 more)
mcp-server/: .dockerignore  Cargo.toml  Dockerfile
mcp-server/src/: config.rs  errors.rs  helm.rs  main.rs  mcp.rs  oci_client.rs  server.rs
mcp-server/src/audit/: event.rs  mod.rs  sink.rs
mcp-server/src/auth/: mod.rs
mcp-server/src/catalog/: apex_fusion_block_producer.rs  apex_fusion_relay.rs  cardano_block_producer.rs  cardano_node_relay.rs  cardano_relay.rs  dolos.rs  extension.rs  hydra_node.rs  mod.rs  oci.rs  schema.rs  source.rs
mcp-server/src/k8s/: client.rs  helm_releases.rs  mod.rs
mcp-server/src/policy/: approvals.rs  mod.rs  roles.rs  scopes.rs
mcp-server/src/prompts/: catalog.rs  mod.rs
mcp-server/src/resources/: mod.rs  router.rs  uri.rs
mcp-server/src/session/: mod.rs  sqlite.rs
mcp-server/src/skills/: mod.rs  oci.rs  source.rs
mcp-server/src/tools/: args.rs  common.rs  dynamic.rs  hydra.rs  k8s_summaries.rs  mod.rs  router.rs  schema_validation.rs  supernode.rs  vault.rs  workloads.rs
mcp-server/src/tools/workloads/: delete.rs  dolos.rs  get.rs  install.rs  list.rs  logs.rs  metrics.rs  mod.rs  outputs.rs  registry.rs  upgrade.rs
mcp-server/src/vault/: client.rs  mod.rs  paths.rs  redaction.rs
(+521 files in other folders)
